# zuni-programs3

./: .eslintrc.json  .gitignore  .mocharc.json  Anchor.toml  Cargo.toml  Makefile  README.md  main.ts  mocha.sh  package.json  rollup.config.js  tsconfig.json
.github/workflows/: mocha-test.yml
.husky/: pre-commit
circuits/vc/: vc_schema_field_check_verifier.circom
circuits/vc/vc_single_field/: vc_schema_field_check_verifier.r1cs  vc_schema_field_check_verifier_verification_key.json
circuits/vc/vc_single_field/vc_schema_field_check_verifier_js/: vc_schema_field_check_verifier.wasm
circuits/voting/: babyjub_customized.circom  vote_verifier.circom  vote_verifier_input.json  voting.circom
circuits/voting/artifacts/: vote_verifier_public.json  vote_verifier_verification_key.json
circuits/voting/artifacts/vote_verifier_js/: vote_verifier.wasm
circuits/voting/artifacts/voting_js/: voting.wasm
circuits/voting/vote_verifier/: vote_verifier_proof.json  vote_verifier_witness.wtns
circuits/voting/vote_verifier/vote_verifier_js/: vote_verifier.wasm
programs/crypto-experiment/: Cargo.toml
programs/crypto-experiment/src/: groth16verifier_electron_lab.rs  lib.rs
programs/private-voting/: Cargo.toml
programs/private-voting/src/: lib.rs
programs/verifiable-data-registry/: Cargo.toml
programs/verifiable-data-registry/src/: error.rs  lib.rs  state.rs
programs/verifiable-data-registry/src/instructions/: mod.rs
programs/verifiable-data-registry/src/instructions/credential/: add_credential.rs  mod.rs  revoke_credential.rs
programs/verifiable-data-registry/src/instructions/did/: add_verification_method.rs  add_verification_relationship.rs  mod.rs  (+1 more)
test/: zuni-programs.ts
test/voting/: voting.spec.ts
tests/: credential.ts  did.ts  key.ts  verifiable-data-registry.ts  zuni-programs.ts
tests/utils/: index.ts
