[package]
name = "crypto_experiment"
version = "0.1.0"
description = "Jubjub curve testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_experiment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
babyjubjub-rs = "0.0.10"

[dependencies.ff]
version = "0.11"
features = ["derive"]
package = "ff_ce"

[dependencies.num]
version = "0.4"

[dependencies.num-bigint]
version = "0.4"
features = ["rand"]

[dependencies.num-traits]
version = "0.2.8"

[dependencies.poseidon-rs]
version = "0.0.8"

[dependencies.rand]
version = "0.8"